--- a/cryptopals-c-1/cryptopals-c-1.vcxproj.filters
+++ b/cryptopals-c-1/cryptopals-c-1.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="cryptopals.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="conversions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
