--- a/cryptopals-c-1/cryptopals-c-1.vcxproj
+++ b/cryptopals-c-1/cryptopals-c-1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{4b38705a-5de4-4843-8be8-0608b2ce1d2f}</ProjectGuid>
     <RootNamespace>cryptopalsc1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>cryptopals-c</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -142,6 +143,7 @@
     <ClCompile Include="testbed.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="conversions.h" />
     <ClInclude Include="cryptopals.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
