--- a/cryptopals-c-1/cryptopals-c-1.vcxproj.filters
+++ b/cryptopals-c-1/cryptopals-c-1.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClInclude Include="conversions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="aes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="testStrings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
