some header cleanup

--- a/cryptopals-c-1/cryptopals-c-1.vcxproj.filters
+++ b/cryptopals-c-1/cryptopals-c-1.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClInclude Include="testStrings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="vigenere.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
