--- a/cryptopals-c-1/cryptopals-c-1.vcxproj
+++ b/cryptopals-c-1/cryptopals-c-1.vcxproj
@@ -158,6 +158,8 @@
     <ClInclude Include="aes.h" />
     <ClInclude Include="conversions.h" />
     <ClInclude Include="cryptopals.h" />
+    <ClInclude Include="utils.h" />
+    <ClInclude Include="vigenere.h" />
     <ClInclude Include="testStrings.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
