challenge 8, refactoring, vector<byte>s
also i forgot about challenge 10 so i deleted the cbc code using openssl

--- a/cryptopals-c-1/cryptopals-c-1.vcxproj
+++ b/cryptopals-c-1/cryptopals-c-1.vcxproj
@@ -158,6 +158,8 @@
     <ClInclude Include="aes.h" />
     <ClInclude Include="conversions.h" />
     <ClInclude Include="cryptopals.h" />
+    <ClInclude Include="testSet1.h" />
+    <ClInclude Include="typedefs.h" />
     <ClInclude Include="utils.h" />
     <ClInclude Include="vigenere.h" />
     <ClInclude Include="testStrings.h" />
