--- a/cryptopals-c-1/cryptopals-c-1.vcxproj.filters
+++ b/cryptopals-c-1/cryptopals-c-1.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClInclude Include="vigenere.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="typedefs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="testSet1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
